mod_base: add non-circle icons

--- a/modules/mod_base/lib/css/z.icons/_src/demo.html
+++ b/modules/mod_base/lib/css/z.icons/_src/demo.html
@@ -9,10 +9,23 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;12)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;16)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn fgc1">Grid Size: 16</h1>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-ok"></span><span class="mls"> icon-ok</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e608" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe608;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
 				<span class="icon-ok-circle"></span><span class="mls"> icon-ok-circle</span>
@@ -20,6 +33,19 @@
 			<fieldset class="fs0 size1of1 clearfix hidden-false">
 				<input type="text" readonly value="e602" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe602;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-minus"></span><span class="mls"> icon-minus</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e60a" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe60a;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix hidden-true">
 				<span class="unit pvs fgc1">liga: </span>
@@ -41,6 +67,19 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
+				<span class="icon-plus"></span><span class="mls"> icon-plus</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e60d" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe60d;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
 				<span class="icon-plus-circle"></span><span class="mls"> icon-plus-circle</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix hidden-false">
@@ -54,11 +93,11 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-cross"></span><span class="mls"> icon-cross</span>
+				<span class="icon-help"></span><span class="mls"> icon-help</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix hidden-false">
-				<input type="text" readonly value="e60c" class="unit size1of2" />
-				<input type="text" maxlength="1" readonly value="&#xe60c;" class="unitRight size1of2 talign-right" />
+				<input type="text" readonly value="e60e" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe60e;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix hidden-true">
 				<span class="unit pvs fgc1">liga: </span>
@@ -85,6 +124,19 @@
 			<fieldset class="fs0 size1of1 clearfix hidden-false">
 				<input type="text" readonly value="e601" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe601;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-cross"></span><span class="mls"> icon-cross</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e60c" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe60c;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix hidden-true">
 				<span class="unit pvs fgc1">liga: </span>
